# nao-cube-project

./: .gitignore  Hra s kostkou.pptx  README.md  popis projektu.TXT  prikazy
.qi/: qibuild.xml  worktree.xml
cube/: CMakeLists.txt  main.cpp  qiproject.xml  test.cpp
cube/build-host/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dependencies.cmake  qitest.cmake
cube/build-robot/: CMakeCache.txt
hra s kostkou/: hra s kostkou.pml  manifest.xml  throw.xap
hra s kostkou/hra s kostkou/: behavior.xar
imageRecogniser/: build.xml
imageRecogniser/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
javaRecogniser/: build.xml
javaRecogniser/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
kostka/: CMakeLists.txt  CMakeLists.txt.user.e69aef0  diceimageprocessor.cpp  diceimageprocessor.cpp.autosave  diceimageprocessor.h  diceimageprocessor.h.autosave  dieModule.cpp  dieModule.hpp  houghmain.cpp  hsvimagethresholder.cpp  hsvimagethresholder.h  main.cpp  main2.cpp  qiproject.xml  recognition.cpp  recognition.hpp
kostka-build/: CMakeCache.txt
kostka/build-host/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  kostka.cbp  qitest.cmake
kostka/build-host/sdk/: qitest.json
kostka/build-host/sdk/share/qi/: path.conf
thresholdProject/: hough.h  houghmain.cpp  main.cpp  thresholdproject.exe.stackdump
thresholdProject/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml  (+1 more)
(+33 files in other folders)
